--- a/kubernetes/kubernetes.yml
+++ b/kubernetes/kubernetes.yml
@@ -6,7 +6,7 @@ functions:
   kubernetes:
     lang: runner-template-python3
     handler: ./kubernetes
-    image: 564407622114.dkr.ecr.eu-west-1.amazonaws.com/actionstore/kubernetes:latest
+    image: kubiya/action-store-k8s:latest
     annotations:
         topic: "kubernetes"
         com.openfaas.serviceaccount: default
