--- a/kubernetes/kubernetes/requirements.txt
+++ b/kubernetes/kubernetes/requirements.txt
@@ -1,42 +1,5 @@
-anyio==3.6.2
-attrs==22.2.0
-cachetools==5.3.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
-click==8.1.3
-fastapi==0.79.1
-gcloud==0.18.3
-google-auth==2.16.0
-googleapis-common-protos==1.58.0
-h11==0.14.0
-httpcore==0.16.3
-httplib2==0.21.0
-httpx==0.23.3
-idna==3.4
-install==1.3.5
-jsonschema==4.17.3
+kubiya
+pydantic
 kubernetes==25.3.0
-kubiya==0.1.1
-lightkube==0.12.0
-lightkube-models==1.26.0.4
-oauth2client==4.1.3
-oauthlib==3.2.2
-protobuf==4.22.0rc3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==1.10.2
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-PyYAML==6.0
-requests==2.28.2
-requests-oauthlib==1.3.1
-rfc3986==1.5.0
-rsa==4.9
-six==1.16.0
-sniffio==1.3.0
-starlette==0.19.1
-typing_extensions==4.4.0
-urllib3==1.26.14
-uvicorn==0.18.3
-websocket-client==1.5.1
+gcloud==0.18.3
+lightkube
