enable cronjob wf fix

--- a/kubernetes/examples/cron_jobs/kubernetes_enable_cronjob.yaml
+++ b/kubernetes/examples/cron_jobs/kubernetes_enable_cronjob.yaml
@@ -1,6 +1,6 @@
 version: 3
 type: conversation
-name: "kubernetes_disable_cronjob"
+name: "kubernetes_enable_cronjob"
 steps:
   - id: k8s_namespaces
     type: action
@@ -13,24 +13,24 @@ steps:
     type: input
     value_type: enum
     possible_values: ${k8s_namespaces}
-    prompt: "Select the namespace of the cron job you want to disable"
+    prompt: "Select the namespace of the cron job you want to enable"
   - id: k8s_cronjobs
     type: action
     action:
       runner: "demo"
       store: kubernetes
-      name: "list_enabled_cronjobs_for_namespace"
+      name: "list_disabled_cronjobs_for_namespace"
       parameters:
         namespace: ${selected_namespace}
   - id: selected_cronjob
     type: input
     value_type: enum
     possible_values: ${k8s_cronjobs}
-    prompt: "Select the cron job you want to disable"
+    prompt: "Select the cron job you want to enable"
   - id: validate
     type: input
     value_type: boolean
-    prompt: '⚠️ Cron job *${selected_cronjob}* will be disabled in namespace *${selected_namespace}*. Do you want to continue?'
+    prompt: '⚠️ Cron job *${selected_cronjob}* will be enabled in namespace *${selected_namespace}*. Do you want to continue?'
   - id: condition
     type: condition
     if:
@@ -41,13 +41,13 @@ steps:
         - id: notify
           type: message
           prompt: |
-            🔄 Disabling cron job *${selected_cronjob}* in namespace *${selected_namespace}*...
+            🔄 Enabling cron job *${selected_cronjob}* in namespace *${selected_namespace}*...
         - id: disable
           type: action
           action:
             runner: "demo"
             store: kubernetes
-            name: "disable_cronjob"
+            name: "enable_cronjob"
             parameters:
               cron_job_name: ${selected_cronjob}
               namespace: ${selected_namespace}
@@ -55,10 +55,10 @@ steps:
           type: message
           prompt: |
             ✅ *Done!*
-            Cron job *${selected_cronjob}* disabled in namespace *${selected_namespace}*!
+            Cron job *${selected_cronjob}* enabled in namespace *${selected_namespace}*!
       else:
         - id: cancel
           type: message
           prompt: |
             ❌ *Cancelled!*
-            Cron job *${selected_cronjob}* disabling cancelled!
+            Cron job *${selected_cronjob}* enabling cancelled!
