--- a/.github/workflows/publish_to_docker_hub.yaml
+++ b/.github/workflows/publish_to_docker_hub.yaml
@@ -2,9 +2,9 @@ name: Publish to Docker Hub
 
 on:
   push:
-    branches: [ main ]
+    branches: "**"
   pull_request:
-    branches: [ main ]
+    branches: "**"
 
 jobs:
   build:
