--- a/.github/workflows/publish_to_docker_hub.yaml
+++ b/.github/workflows/publish_to_docker_hub.yaml
@@ -1,3 +1,4 @@
+
 name: Publish to Docker Hub
 
 on:
@@ -5,13 +6,15 @@ on:
     branches: "**"
   pull_request:
     branches: "**"
-
+    
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Fetch all history for all branches and tags
 
       - name: Setup Environment
         run: sudo apt-get install -y curl jq
@@ -19,7 +22,12 @@ jobs:
       - name: Get changed directories
         id: getchange
         run: |
-          echo "::set-output name=dirs::$(git diff --dirstat=files,0 HEAD~1..HEAD | awk '{print $2}')"
+          LAST_COMMIT=$(git rev-parse HEAD~1 2>/dev/null)
+          if [ -z "$LAST_COMMIT" ]; then
+            # If there's no commit to compare with, compare the current commit with an empty tree
+            LAST_COMMIT=4b825dc642cb6eb9a060e54bf8d69288fbee4904
+          fi
+          echo "::set-output name=dirs::$(git diff --dirstat=files,0 $LAST_COMMIT..HEAD | awk '{print $2}')"
 
       - name: Bundle and send changes
         env:
