--- a/.github/workflows/publish_to_docker_hub.yaml
+++ b/.github/workflows/publish_to_docker_hub.yaml
@@ -18,32 +18,49 @@ jobs:
       - name: Setup Environment
         run: sudo apt-get install -y curl jq
 
-      - name: Get changed directories
+      - name: Get changed files
         id: getchange
         run: |
           set -e
           LAST_COMMIT=$(git rev-parse HEAD~1 2>/dev/null)
           if [ -z "$LAST_COMMIT" ]; then
+            # If there's no commit to compare with, compare the current commit with an empty tree
             echo "No commit found to compare with. Using empty tree commit hash."
             LAST_COMMIT=4b825dc642cb6eb9a060e54bf8d69288fbee4904
           fi
           echo "Comparing with commit: $LAST_COMMIT"
           echo "Git diff output:"
-          git diff --dirstat=files,0 $LAST_COMMIT..HEAD
-          echo "::set-output name=dirs::$(git diff --dirstat=files,0 $LAST_COMMIT..HEAD | awk '!/^\\./ {print $2}' | sed 's:/*$::')"
-          echo "Changed directories:"
-          echo ${{ steps.getchange.outputs.dirs }}
+          git diff --name-only $LAST_COMMIT..HEAD
+          echo "::set-output name=files::$(git diff --name-only $LAST_COMMIT..HEAD)"
+          echo "Changed files:"
+          echo ${{ steps.getchange.outputs.files }}
+      - name: Exclude directories
+        id: filtered
+        run: |
+          set -e
+          FILTERED_FILES=""
+          IFS=$'\n'
+          for file in ${{ steps.getchange.outputs.files }}; do
+            if [[ ! "$file" =~ ^(\.|\.\.) ]]; then
+              FILTERED_FILES+="$file"$'\n'
+            fi
+          done
+          echo "::set-output name=filtered_files::$FILTERED_FILES"
+          echo "Filtered files:"
+          echo ${{ steps.filtered.outputs.filtered_files }}
       - name: Bundle and send changes
         env:
           KUBIYA_API_KEY: ${{ secrets.KUBIYA_API_KEY }}
           KUBIYA_ORGANIZATION: ${{ secrets.KUBIYA_ORGANIZATION }}
         run: |
           set -e
-          for dir in ${{ steps.getchange.outputs.dirs }}; do
-            echo "Processing directory: $dir"
-            if [ -d "$dir" ]; then
-              echo "Directory exists. Creating tar file."
-              tar -czf changes.tar.gz -C "$(dirname "$file")" "$(basename "$file")"
+          for file in ${{ steps.filtered.outputs.filtered_files }}; do
+            echo "Processing file: $file"
+            if [ -f "$file" ]; then
+              echo "File exists. Creating tar file."
+              DIRECTORY=$(dirname "$file")
+              BASENAME=$(basename "$file")
+              tar -czf changes.tar.gz -C "$DIRECTORY" "$BASENAME"
               if [ -s changes.tar.gz ]; then
                   echo "Tar file created. Sending request to Kubiya API."
                   ENCODED_CONTENT=$(base64 -w 0 changes.tar.gz)
@@ -53,7 +70,7 @@ jobs:
                   -d "{
                     \"action\": \"build\",
                     \"input\": {
-                      \"image\": \"kubiya/action-store-$dir\",
+                      \"image\": \"kubiya/action-store\",
                       \"source_context\": \"$ENCODED_CONTENT\"
                     }
                   }")
@@ -62,14 +79,15 @@ jobs:
                     echo "API Response:"
                     cat output.json
                   else
-                    echo "Request failed with status $RESPONSE"
+                    echo "Request failed with HTTP status code: $RESPONSE"
                     echo "API Response:"
                     cat output.json
+                    exit 1
                   fi
               else
                   echo "Tar file is empty. Skipping."
               fi
             else
-              echo "Directory does not exist. Skipping."
+              echo "File does not exist. Skipping."
             fi
           done
